# PyChilasLasers

./: .gitignore  .pre-commit-config.yaml  README.md  debug.csv  demo.py  demo_atlas.py  index  index.md  lasers.py  lasers_swept.py  lasers_tlc.py  lasers_tlm.py  licence.md  main.py  mkdocs.yml  pyproject.toml  txt.py
.github/: pull_request_template.md
.github/workflows/: code-formatting.yml  documentation.yml  publish.yml
docs/: FileFormatError.rst  HowTo.txt  about.md  conf.py  howto.md  index.md  index.rst  lasers.rst  lasers_swept.rst  lasers_tlc.rst  lasers_tlm.rst  module.md  project-structure.md  quickstart.md
docs/_templates/autosummary/: class.rst  module.rst
docs/assets/diagrams/: Class_diagram.drawio
docs/devdocs/: README.md  coding-conventions.md  git-workflow.md  project-structure.md
docs/diagrams/: .$Class diagram.drawio.bkp  Class diagram.drawio  LaserCOM activity diagrams.drawio
docs/drawio-exporter/: 1b24d4738ec877823cb3fbab6110f2b3d8cc4eee-0
docs/package/: calibration.md  comm.md  constants.md  exceptions.md  index.md  laser.md  modes.md  system.md  utils.md
docs/package/laser_components/: heaters.md  index.md
docs/scripts/: gen_tree.py  gendoc.py
docs/stylesheets/: extra.css
examples/: basic_usage.py  basic_usage_sweeping.py
pychilaslasers/: FileFormatError.py  OperatingModeError.py  __init__.py  atlas_laser.py  lasers.py  lasers_swept.py  lasers_tlc.py  lasers_tlm.py
src/pychilaslasers/: __init__.py  calibration.py  comm.py  constants.py  laser.py  system.py  utils.py
src/pychilaslasers/calibration/: calibration_parsing.py  defaults.py  structs.py
src/pychilaslasers/exceptions/: __init__.py  laser_error.py  mode_error.py
src/pychilaslasers/laser_components/: __init__.py  diode.py  driver.py  laser_component.py  sensors.py  tec.py
src/pychilaslasers/laser_components/heaters/: __init__.py  heater_channels.py  heaters.py  phase_section.py
src/pychilaslasers/modes/: __init__.py  calibrated.py  calibration.py  manual_mode.py  mode.py  steady_mode.py  sweep_mode.py  tune_mode.py
tests/: __init__.py  test_calibration.py  test_calibration_reading.py
tests/calibrationFiles/: atlas1.csv  atlas2.csv  comet1.csv  comet1_with_settings.csv  comet2.csv
