[project]
name = "pychilaslasers"
version = "1.0.0"
description = "Python library for controlling Chilas lasers"
readme = "README.md"
authors = [
  { name = "Chilas B.V.", email = "software@chilas.com" }
]
license = { text = "Apache-2.0" }

requires-python = ">=3.13"
dependencies = [
    "packaging>=25.0",
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.3.1",
    "mkdocs-drawio-exporter>=0.10.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin>=7.1.7",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.18",
    "mkdocs-simple-hooks>=0.1.5",
    "mkdocstrings[python]>=0.30.0",
    "pychilaslasers",
    "pytest>=8.4.1",
]

[tool.uv.sources]
pychilaslasers = { workspace = true }


[tool.pyright]

reportOptionalMemberAccess = "warning"
reportAttributeAccessIssue = "warning"
