[project]
name = "pychilaslasers"
version = "1.0.0"
description = "Python library for controlling Chilas lasers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "packaging>=25.0",
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
    "pychilaslasers",
    "pytest>=8.4.1",
]

[tool.uv.sources]
pychilaslasers = { workspace = true }


[tool.pyright]

reportOptionalMemberAccess = "warning"
reportAttributeAccessIssue = "warning"
